--- a/RecipeProject/Pipfile
+++ b/RecipeProject/Pipfile
@@ -10,6 +10,7 @@ djangorestframework-simplejwt = "*"
 djoser = "*"
 psycopg2 = "*"
 psycopg2-binary = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
